--- a/index-ru.html
+++ b/index-ru.html
@@ -3,22 +3,22 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Pedkengash</title>
+	<title>Pedkengash.uz</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.min.css">
 </head>
 <body>
 	<header class="header">
 		<div class="container">
 			<div class="header__items">
 				<p class="header__email">
-					Bizning elektron manzil:
+					Наша почта:
 					<a class="header__email-link" href="#">pedkengash@gmail.com</a>
 				</p>
-				<a class="header__btn" href="#form">yuborish</a>
-				<a class="header__lang" href="index-ru.html"> ru</a>
+				<a class="header__btn" href="#form">оставить заявку</a>
+				<a class="header__lang" href="index.html"> uz</a>
 			</div>
 		</div>
 	</header>
@@ -26,13 +26,13 @@
 	<section class="top-content">
 		<div class="container">
 			<div class="top-content__items">
-				<h1 class="top-content__title">tanlovlar va konkurslar</h1>
-				<p class="top-content__text">to'lov bor yo'g'i 15000 sum</p>
+				<h1 class="top-content__title">КОНКУРСЫ, ОЛИМПИАДЫ, </h1>
+				<p class="top-content__text">ОРГАНИЗАЦИОННЫЙ ВЗНОС всего 15000 сум</p>
 				<p class="top-content__text">
-					allaqachon diplom olishdi:
+					УЖЕ ОФОРМЛЕНО ДИПЛОМОВ:
 					<span id="out">1</span>
 				</p>
-				<a class="top-content__link" href="#">tanlov nizomi</a>
+				<a class="top-content__link" href="#">Положение о конкурсе</a>
 			</div>
 		</div>
 	</section>
@@ -40,12 +40,12 @@
 	<section class="step">
 		<div class="container">
 			<div class="step__box">
-				<h2 class="step__title">diplomni qanday olish mumkin</h2>
+				<h2 class="step__title">ТРИ ШАГА ДО ДИПЛОМА</h2>
 				<div class="step__items">
 					<div class="step__block">
 						<span class="step__block-num">1</span>
-						<h4 class="step__block-title">o'zingiz haqingizdagi ma'lumotlarni to'ldiring</h4>
-						<p class="step__block-text">Familiya, ism va sharifingiz, ish joyingiz, dars beradigan faningiz va manzilingizni kiriting</p>
+						<h4 class="step__block-title">Заполнить заявку</h4>
+						<p class="step__block-text">Внимательно заполнить все поля заявки данными для документа и прикрепите работу</p>
 					</div>
 					<div class="step__block">
 						<span class="step__block-num">2</span>
@@ -73,6 +73,38 @@
 						
 						<li class="info__list">Для аттестации, стимулирующих выплат, портфолио, подтверждения результативности, подтверждения профессионального развития и активности и т.д.</li>
 					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="conkurs">
+		<div class="container">
+			<h3 class="conkurs__title-h3">ВЫБЕРИТЕ КОНКУРС</h3>
+			<div class="conkurs__items">
+				<div class="conkurs__box">
+					<h4 class="conkurs__title">Победы независимости</h4>
+					<a href="#">Принять участие</a>
+				</div>
+				<div class="conkurs__box">
+					<h4 class="conkurs__title">Независимость и образование</h4>
+					<a href="#">Принять участие</a>
+				</div>
+				<div class="conkurs__box">
+					<h4 class="conkurs__title">Победы независимости</h4>
+					<a href="#">Принять участие</a>
+				</div>
+				<div class="conkurs__box">
+					<h4 class="conkurs__title">Независимость и образование</h4>
+					<a href="#">Принять участие</a>
+				</div>
+				<div class="conkurs__box">
+					<h4 class="conkurs__title">Победы независимости</h4>
+					<a href="#">Принять участие</a>
+				</div>
+				<div class="conkurs__box">
+					<h4 class="conkurs__title">Независимость и образование</h4>
+					<a href="#">Принять участие</a>
 				</div>
 			</div>
 		</div>
@@ -110,7 +142,8 @@
 						<input type="hidden" name="form_subject" value="Block Form">
 			<!-- END Hidden Required Fields -->
 
-	
+
+
 			<input class="form__input" type="text" name="" placeholder="Ф.И.О" required>
 			<input class="form__input" type="email" name="" placeholder="@mail" required>
 			<input class="form__input" type="text" name="" placeholder="Место работы" required>
